# flask_app

./: .gitignore  pyproject.toml  readme.md
flask_app/: run_dev.py  run_prod.py  run_tests.py
flask_app/api/: data.py  user.py
flask_app/app/: api.py  common.py  config.py  data.py  models.py  predict.py  schemas.py
flask_app/tests/: api.py  data.py  user.py
