[project]
dependencies = [
    'email-validator',
    'pytest-asyncio',
    'sqlalchemy',
    'aiosqlite',
    'waitress',
    'greenlet',
    'pydantic',
    'asgiref',
    'pytest',
    'flask',
]

name = 'flask-test'
version = '0.0.1'
readme = 'readme.md'
requires-python = '>=3.11'
classifiers = [
    'License :: OSI Approved :: GNU Affero General Public License v3',
]

[tool.pyright]
venvPath = '.'
venv = '.venv'

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "module"

